--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -23,9 +23,13 @@
                     <i class="fas fa-envelope"></i>
                     <span>Contacto</span>
                 </a>
-                <a routerLink="/login" routerLinkActive="active" class="nav-card">
-                    <i class="fas fa-sign-in-alt"></i>
-                    <span>Iniciar sesión</span>
+                <a *ngIf="!isLoggedIn()" routerLink="/login" routerLinkActive="active" class="nav-card">
+                     <i class="fas fa-sign-in-alt"></i>
+                     <span>Iniciar sesión</span>
+                </a>
+                    
+                <a *ngIf="isLoggedIn()" (click)="onLogout()" class="nav-card">
+                     <i class="fas fa-sign-out-alt"></i>                <span>Cerrar Sesión</span>
                 </a>
             </div>
         </nav>
