--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -3,8 +3,7 @@
         <img src="/assets/images/Logo_SF.png" alt="Logo SILCAST" class="logo-img">
       <form class="login-form" (ngSubmit)="onLogin()" #loginForm="ngForm">
         <div class="form-group">
-          <label for="username">Usuario</label>
-          <input type="text" id="username" name="username" [(ngModel)]="username" required>
+          <label for="email">Correo Electrónico</label> <input type="text" id="email" name="email" [(ngModel)]="email" required>
         </div>
         <div class="form-group">
           <label for="password">Contraseña</label>
